# welt_auv

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.control  Dockerfile.tx2  Dockerfile.vision  LICENSE  README.md  ba  bc  bm  build.sh  build_docker.sh  build_missions.sh  build_vision.sh  build_without_serial.sh  bv  dbc  dbcl  dbv  dbvl  dc  delbuild  delrecords  docker_build_control.sh  docker_build_tx2.sh  docker_build_vision.sh  dsim  dv  lc  lsim  lv  run.sh  run_control.sh  run_docker.sh  run_docker_control.sh  run_docker_vision.sh  run_image_view.sh  run_recorder.sh  run_vision.sh  (+2 more)
.github/workflows/: build-control-multiarch.yml  build-od-multiarch.yml
docker/: .env  .env.example  docker-compose.yml
docker/control/: Dockerfile  bx  d  entrypoint.sh
docker/od/: Dockerfile  bx  d  entrypoint.sh
scripts/: build.sh  cleanup.sh  common.sh  docker_runner.sh  launch_local.sh  srv_call_transition  topic_pub_enable_od_bottom  topic_pub_enable_od_front
src/welt_cam/: package.xml  setup.cfg  setup.py
src/welt_cam/configs/: bottom_camera.yaml  front_camera.yaml
src/welt_communication/: CMakeLists.txt  package.xml
src/welt_communication/include/welt_communication/messages/: welt.h
src/welt_communication/src/: hardware_bridge.cpp  hardware_bridge_node.cpp  uart_driver_node.cpp  udp_driver.cpp  udp_driver_node.cpp  udp_driver_receiver_node.cpp  udp_driver_sender_node.cpp
src/welt_communication/src/messages/: welt.cpp
src/welt_launch/: package.xml  setup.cfg  setup.py
src/welt_launch/launch/: cam.launch.py  com.launch.py  control.launch.py  main.launch.py  od.launch.py  recorder.launch.py  sim.launch.py  vision.launch.py  vision_yolov5.launch.py  vision_yolov8.launch.py
